# awr2944-fmcw-radar

./: .gitignore  LICENSE  README.md  implementation_plan.md  lua_builder_addendum.txt  patch.py  patch10.py  patch11.py  patch12.py  patch13.py  patch14.py  patch15.py  patch15_out.txt  patch16.py  patch17.py  patch18.py  patch18_out.txt  patch19.py  patch2.py  patch20.py  patch21.py  patch22.py  patch23.py  patch24.py  patch25.py  patch26.py  patch27.py  patch28.py  patch29.py  patch3.py  patch30.py  patch31.py  patch32.py  patch33.py  patch34.py  patch35.py  patch36.py  patch37.py  patch38.py  patch39.py  (+20 more)
.github/workflows/: ci.yml  publish.yml
.pytest-tmp/: test_all_commands_presentcurrent  test_all_zero_detectedcurrent  test_archive_existing_capture_current  test_atomic_state_writecurrent  test_auto_mode_fallback_pywinacurrent  test_auto_mode_prefers_csharp_current  test_bad_pattern_not_in_executcurrent  test_bridge_errorcurrent  test_bridge_execute_timeoutcurrent  test_bridge_generate_creates_fcurrent  test_bridge_not_runcurrent  test_bridge_smoke_generationcurrent  test_bridge_smoke_status_not_rcurrent  test_bridge_smoke_status_succecurrent  test_bridge_stale_detectioncurrent  test_bridge_successcurrent  test_build_dofile_commandcurrent  test_capture_artifacts_match_pcurrent  test_capture_refuses_without_ccurrent  test_capture_script_contains_scurrent  test_capture_script_has_correccurrent  test_capture_script_has_run_macurrent  test_capture_script_no_config_current  test_capture_script_path_backscurrent  test_capture_script_path_commecurrent  test_capture_trigger_script_wacurrent  test_catalog_known_functions_mcurrent  test_catalog_marks_unknownscurrent  test_check_capture_all_zeroscurrent  test_check_capture_correct_poscurrent  test_check_capture_default_expcurrent  test_check_capture_empty_filecurrent  test_check_capture_json_outputcurrent  test_check_capture_raw_onlycurrent  test_check_capture_reads_dca_lcurrent  test_check_capture_size_model_current  test_check_run_firmware_failurcurrent  test_check_run_firmware_succescurrent  test_check_run_parses_multilincurrent  test_check_run_smoke_successcurrent  (+163 more)
.pytest-tmp/test_all_commands_present0/: testrun1_manifest.json
.pytest-tmp/test_atomic_state_write0/: guided_123_state.json
.pytest-tmp/test_bad_pattern_not_in_execut0/: testrun1_manifest.json
.pytest-tmp/test_bad_pattern_not_in_execut1/: testrun1_manifest.json
.pytest-tmp/test_bad_pattern_not_in_execut2/: testrun1_manifest.json
.pytest-tmp/test_bad_pattern_not_in_execut3/: testrun1_manifest.json
.pytest-tmp/test_bad_pattern_not_in_execut4/: testrun1_manifest.json
.pytest-tmp/test_bad_pattern_not_in_execut5/: testrun1_manifest.json
.pytest-tmp/test_bridge_error0/: connection_only_manifest.json
artifacts/: exp_lau_probe_report.md  root_probe_latest_report.md
docs/: ARCHITECTURE.md  CLI_SPEC.md  CONFIG_SCHEMA.md  CONFIG_SYSTEM.md  DATA_FORMATS.md  DCA_VALIDATED_CAPTURE_RUNBOOK.md  DEPENDENCIES.md  DSP_PIPELINE.md  EXPERIMENT_WORKFLOW.md  EXTERNAL_MMWS_AUTOMATION_PATTERNS.md  MMWAVE_STUDIO_API_PROBE.md  MMWAVE_STUDIO_AR1_API_MAP.md  MMWAVE_STUDIO_BACKEND_ARCHITECTURE.md  MMWAVE_STUDIO_CONNECTION_CONTROL.md  MMWAVE_STUDIO_CONNECTION_PROBE.md  MMWAVE_STUDIO_FIRST_CAPTURE_WORKFLOW.md  MMWAVE_STUDIO_STATIC_CONFIG_PLAN.md  PARSER_VALIDATION_PLAN.md  PROJECT_SPEC.md  ROADMAP.md  TI_BRIDGE_ROADMAP.md  TI_REFERENCE_SUMMARY.md  adc_parser_v1.md  dca1000_capture_evidence_template.md  dca1000_first_capture_runbook.md  dca1000_troubleshooting_matrix.md  end_to_end_capture.md  legacy-mmwave-studio.md  phase5_headless_capture_discovery.md  phase5b_flash_procedure.md  probe_artifact_bundles.md  probe_bundle_reports.md  project_capture_scaffolding_v1.md
examples/: 01_create_project.py  02_dry_run.py  03_open_capture.py  04_verify_capture.py
exp_lau_probe/: .gitignore  capture.yaml  manifest.yaml  notes.md  project.json
notebooks/: 00_experiment_config_workflow.ipynb  01_capture.ipynb  01_spec_validation_demo.ipynb  02_dsp_workbench.ipynb  02_parser_golden_vectors.ipynb  03_mmwave_studio_probe.ipynb  03_viewer_launcher.ipynb  04_first_capture_layout_compare.ipynb  05_mmws_connection_control.ipynb  CLI_LogFile.txt  phase_a_project_scaffolding_smoke.ipynb  phase_a_project_scaffolding_smoke_executed.ipynb  phase_b_hardware_doctor.ipynb  phase_b_hardware_doctor_executed.ipynb  phase_c_structured_profiles.ipynb  phase_d_matlab_viewer_api.ipynb  phase_d_session_capture.ipynb
reference_docs/: DCA1000_mmWave_Studio_raw_capture_video_transcript.txt  INDEX.md
scripts/: fix_dca1000_mmwave.ps1
tests/: conftest.py  test_adapters.py  test_adc_parser.py  test_api.py  test_awr2944_adc.py  test_capture_api_integration.py  test_capture_cli.py  test_capture_session.py  test_capture_smoke.py  test_capture_smoke_cli.py  test_classify.py  test_cli.py  test_cli_wrappers.py  test_cold_boot.py  test_collect_probe_artifacts.py  test_config.py  test_config_commands.py  test_config_parser.py  test_config_provenance_live.py  test_config_resolver.py  test_context.py  test_dca.py  test_dca_cli_headless.py  test_dca_result_contract.py  test_direct_udp.py  test_doctor.py  test_dsp.py  test_dsp_pipeline.py  test_eth_api.py  test_executor.py  test_experiment.py  test_export_plot_live.py  test_failure_report.py  test_golden_vectors.py  test_guided_runner.py  test_headless_api.py  test_headless_serial.py  test_headless_workflow.py  test_lab_api.py  test_layouts.py  (+27 more)
tmp_test_dir/: guided_newsummary_state.json
tools/: collect_probe_artifacts.py  discover_ti_headless.ps1  report_probe_bundle.py
(+1005 files in other folders)
